[tool.poetry]
name = "bldr"
version = "0.0.1"
description = "Build debian packages in a clean docker environment"
authors = ["BLDR Developers <noreply@oneidentity.com>"]
homepage = "https://www.github.com/OneIdentity/bldr"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"
docker = "^4.4.4"
dockerpty = "^0.4.1"
importlib-metadata = "^3.7.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
mypy = "^0.812"
pycodestyle = "^2.7.0"
pytest = "6.0.2"
pytest-cov = "^2.11.1"
pytest-console-scripts = "^1.1.0"

[tool.poetry.scripts]
bldr = "bldr.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
